--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 
 <body>
     <h2>Simple Calculator</h2>
+    <div>Version: <span id="version"></span></div>
     <div>
         <input type="text" id="inputValue" />
     </div>
     <div><span>Result: </span><span id="result">3</span></div>
-    <script type="text/javascript" src="src/calculator.js"></script>
-    <script type="text/javascript" src="src/main.js"></script>
+    <script type="text/javascript" src="calculator.js"></script>
+    <script type="text/javascript" src="version.js"></script>
+    <script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
